# THMXParser

./: CMakeLists-xmlParser.txt.in  CMakeLists.txt
.github/workflows/: ci.yml
include/thmxParser/: thmxParser.hpp
src/: CMakeLists.txt  thmxParser.cpp  thmxParser.hpp
test/: CMakeLists.txt  read_cma_example.cpp  read_cs_03.unit.cpp
test/files/: cma_example.thmx
